# bayesian-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  draft.ipynb  machine_learning.ipynb  mid_presentation.ipynb  pyproject.toml  report_plots.ipynb
inference_results/Normal (n=100)/: X_obs.npy  experiment_config.json  inferences.json
inference_results/Normal (n=1000)/: X_obs.npy  experiment_config.json  inferences.json
inference_results/Student-T (df=5, n=100)/: X_obs.npy  experiment_config.json  inferences.json
inference_results/Student-T (nu=5, n=1000)/: X_obs.npy  experiment_config.json  inferences.json
inference_results/VAR1 (n=100)/: X_obs.npy  experiment_config.json  inferences.json
inference_results/VAR1 (n=1000)/: X_obs.npy  experiment_config.json  inferences.json
notebooks/: arp.ipynb  bayes_and_predictive_approach.ipynb  bayes_and_predictive_approach_new.ipynb  bootstrap_comparison.ipynb  example34.ipynb  garelli.ipynb  pr_observations.ipynb  var1.ipynb
old/old/: simulations.py
src/: chooseN_pipeline.py  config.py  generating_data.py  inference_pipeline_1D.py  inference_pipeline_var1.py  infering.py  parameters.py  plotting.py  predictions.py  predictions_pipeline.py  resampling.py  simulations.py  utils.py
src/old/: distributions.py  predictions.py  predictions_pipeline.py  simulations_pipeline.py  statistical_tests.py
